crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E722_E722.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- kind:
    name: BareExcept
    body: "Do not use bare `except`"
    commit: ~
    fixable: false
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 6
  fix: ~
  parent: ~
- kind:
    name: BareExcept
    body: "Do not use bare `except`"
    commit: ~
    fixable: false
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 6
  fix: ~
  parent: ~
- kind:
    name: BareExcept
    body: "Do not use bare `except`"
    commit: ~
    fixable: false
  location:
    row: 16
    column: 0
  end_location:
    row: 16
    column: 6
  fix: ~
  parent: ~

