crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E742_E742.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- kind:
    name: AmbiguousClassName
    body: "Ambiguous class name: `l`"
    commit: ~
    fixable: false
  location:
    row: 1
    column: 6
  end_location:
    row: 1
    column: 7
  fix: ~
  parent: ~
- kind:
    name: AmbiguousClassName
    body: "Ambiguous class name: `I`"
    commit: ~
    fixable: false
  location:
    row: 5
    column: 6
  end_location:
    row: 5
    column: 7
  fix: ~
  parent: ~
- kind:
    name: AmbiguousClassName
    body: "Ambiguous class name: `O`"
    commit: ~
    fixable: false
  location:
    row: 9
    column: 6
  end_location:
    row: 9
    column: 7
  fix: ~
  parent: ~

