crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E999_E999.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
---
./resources/test/fixtures/pycodestyle/E999.py:3:1: E999 SyntaxError: unindent does not match any outer indentation level
  |
3 | def x():
4 | 
  |  E999
  |


