crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__W291_W29.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- kind:
    name: TrailingWhitespace
    body: Trailing whitespace
    commit: Remove trailing whitespace
    fixable: true
  location:
    row: 4
    column: 5
  end_location:
    row: 4
    column: 6
  fix:
    content: ""
    location:
      row: 4
      column: 5
    end_location:
      row: 4
      column: 6
  parent: ~
- kind:
    name: TrailingWhitespace
    body: Trailing whitespace
    commit: Remove trailing whitespace
    fixable: true
  location:
    row: 11
    column: 34
  end_location:
    row: 11
    column: 37
  fix:
    content: ""
    location:
      row: 11
      column: 34
    end_location:
      row: 11
      column: 37
  parent: ~
- kind:
    name: TrailingWhitespace
    body: Trailing whitespace
    commit: Remove trailing whitespace
    fixable: true
  location:
    row: 13
    column: 5
  end_location:
    row: 13
    column: 8
  fix:
    content: ""
    location:
      row: 13
      column: 5
    end_location:
      row: 13
      column: 8
  parent: ~

