crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__W292_W292_0.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- - kind:
      name: MissingNewlineAtEndOfFile
      body: No newline at end of file
      suggestion: Add trailing newline
      fixable: true
    location:
      row: 2
      column: 8
    end_location:
      row: 2
      column: 8
    fix:
      content: "\n"
      location:
        row: 2
        column: 8
      end_location:
        row: 2
        column: 8
    parent: ~

