crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__W292_W292_4.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- kind:
    NoNewLineAtEndOfFile: ~
  location:
    row: 1
    column: 1
  end_location:
    row: 1
    column: 1
  fix:
    content: "\r\n"
    location:
      row: 1
      column: 1
    end_location:
      row: 1
      column: 1
  parent: ~

