crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__W293_W29.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- kind:
    name: BlankLineWithWhitespace
    body: Blank line contains whitespace
    suggestion: Remove whitespace from blank line
    fixable: true
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 4
  fix:
    edits:
      - location:
          row: 7
          column: 0
        end_location:
          row: 7
          column: 4
        content: ~
  parent: ~

