crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__W605_W605_1.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- - kind:
      name: InvalidEscapeSequence
      body: "Invalid escape sequence: `\\.`"
      suggestion: Add backslash to escape sequence
      fixable: true
    location:
      row: 2
      column: 9
    end_location:
      row: 2
      column: 11
    fix:
      content: "\\"
      location:
        row: 2
        column: 10
      end_location:
        row: 2
        column: 10
    parent: ~
  - kind:
      name: InvalidEscapeSequence
      body: "Invalid escape sequence: `\\.`"
      suggestion: Add backslash to escape sequence
      fixable: true
    location:
      row: 6
      column: 0
    end_location:
      row: 6
      column: 2
    fix:
      content: "\\"
      location:
        row: 6
        column: 1
      end_location:
        row: 6
        column: 1
    parent: ~
  - kind:
      name: InvalidEscapeSequence
      body: "Invalid escape sequence: `\\_`"
      suggestion: Add backslash to escape sequence
      fixable: true
    location:
      row: 11
      column: 5
    end_location:
      row: 11
      column: 7
    fix:
      content: "\\"
      location:
        row: 11
        column: 6
      end_location:
        row: 11
        column: 6
    parent: ~
  - kind:
      name: InvalidEscapeSequence
      body: "Invalid escape sequence: `\\_`"
      suggestion: Add backslash to escape sequence
      fixable: true
    location:
      row: 18
      column: 5
    end_location:
      row: 18
      column: 7
    fix:
      content: "\\"
      location:
        row: 18
        column: 6
      end_location:
        row: 18
        column: 6
    parent: ~

